# simple_login_service

./: .dockerignore  .gitignore  Dockerfile  README.md  logging.conf  pyproject.toml  requirements.txt
src/: https_redirect.py  main.py
src/data/: users.py
src/interface/: authorization_routers.py
src/models/: users.py
src/service/: email.py
tests/: test_main.py
