[tool.poetry]
name = "login_service"
version = "0.1.0"
description = "Simple register and login service with optional 2FA."
authors = ["Paolo Merola <paolo.merola89@gmail.com>"]
license = "Free"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = "^1.10.4"
pytest = "^7.2.0"
passlib = "^1.7.4"
pymongo = "^4.3.3"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
pytest-mock = "^3.10.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
